k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: secure-tasks
spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      serviceAccountName: auth-sa
      containers:
        - name: auth-service
          image: secure-tasks/auth-service:latest
          imagePullPolicy: Never

          securityContext:
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: secure-tasks
spec:
  selector:
    app: auth-service

  ports:
    - port: 4001
      targetPort: 4001
