k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: secure-tasks
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: secure-tasks/frontend:latest
          imagePullPolicy: Never
          securityContext:
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3000
      serviceAccountName: frontend-sa

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: secure-tasks
spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000
